@@ -17,7 +17,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -56,7 +55,7 @@ public class EmployeeEducationServiceImpl implements EmployeeEducationService {
         }
         return educationRepository.findByEmployeeIdOrderByStartYearDesc(employeeId).stream()
                 .map(educationMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
